# iot-prj

./: .gitattributes  .gitignore  QUICK_START_COLAB.txt  RUN.MD  START_HERE.txt  START_HERE_FULL_DATASET.txt  pyproject.toml  requirements.txt  tree.txt
config/: base_config.yaml
docs/presentation/: slide_outline.md
docs/report/: BAO_CAO.aux  BAO_CAO.out  BAO_CAO.tex  BAO_CAO.toc  chuong_1_tong_quan.md  chuong_2_mo_hinh_de_xuat.md  chuong_3_thuc_nghiem_va_thao_luan.md  chuong_4_ket_luan.md  requirement.md  tai_lieu_tham_khao.md
docs/report/mermaids/: system_overview.mmd
evaluation/: evaluation_20251017_094450.json  evaluation_summary_20251017_094450.txt
models/full_dataset/: attack_mapping_20251017_114223.pkl  feature_columns_20251017_115443.pkl  label_encoder_20251017_115443.pkl  metrics_20251017_114223.json  metrics_20251017_115443.json  stage1_binary_20251017_114223.pkl  stage1_binary_20251017_115443.pkl  stage2_multiclass_20251017_114223.pkl  stage2_multiclass_20251017_115443.pkl
notebooks/: IOT.pyinb
results/exploration/: entire_dataset_exploration.json  exploration_100k.json  test_10k.json
scripts/: create_temporal_split.py  explore_entire_dataset.py
src/: __init__.py
src/data/: __init__.py  loader.py  schema.py
src/dataset_5percent/: 02_binary_attack_vs_normal.py  03_multiclass_4classes.py  04_hierarchical_two_stage_classification.py
src/dataset_full/: COLAB_README.md  README.md  RUN_PIPELINE.sh
src/detec_demo/: completed_windows.csv  docker-compose.yml  main.py  prometheus.yml  run_attack.sh  stag3.csv
src/detec_demo/argus/: Dockerfile
(+51 files in other folders)
